hphp/test/zend/good/Zend/tests/errmsg_011.php.expectf

Fatal error: Redeclared method test::foo in %s/errmsg_011.php on line 6
